--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.1",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
