--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
